--- a/sorted/Cargo.toml
+++ b/sorted/Cargo.toml
@@ -18,4 +18,4 @@ trybuild = { version = "1.0.49", features = ["diff"] }
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0", features = ["full", "visit-mut"] }
